Bug: Fix footer height and white overflow

--- a/src/styles/footer-style.module.css
+++ b/src/styles/footer-style.module.css
@@ -1,5 +1,4 @@
 .footer {
-    height: 350px;
     padding-top: 20px;
     font-size: 1rem;
     background: #192036;
@@ -10,7 +9,7 @@
     margin-left: -30px;
     font-weight: 300;
 }
-.footer h5 {
+.footer h3 {
     font-size: 1.2rem;
     font-weight: 300;
     margin-bottom: 10px;
